creado perfil de usuario, persistencia del login  y navegacion principal

--- a/src/app/login/register.component.html
+++ b/src/app/login/register.component.html
@@ -48,7 +48,7 @@
                 <div class="form-group">
                     <select name="role" fromControlName="role" class="form-control" required>
                         <option value="">Soy un...</option>
-                        <option value="ATLHETE">Atleta</option>
+                        <option value="ATHLETE">Atleta</option>
                         <option value="TRAINER">Entrenador</option>
                     </select>
                 </div>
