--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <!-- ============================================================== -->
 <!-- Main wrapper - style you can find in pages.scss -->
 <!-- ============================================================== -->
-<section id="wrapper" class="login-register login-sidebar" style="background-image:url(../assets/images/background/login-register.jpg);">
+<section id="wrapper" class="login-register login-sidebar" style="background-image:url(../assets/images/background/background_men01-min.jpg);">
     <div class="login-box card">
         <div class="card-body">
             <form ngNativeValidate #f="ngForm" class="form-horizontal form-material" (ngSubmit)="ingresar(f)">
@@ -20,13 +20,13 @@
                     <div class="col-md-12">
                         <div class="checkbox checkbox-primary pull-left p-t-0">
                             <input [(ngModel)]="recuerdame" name="recuerdame" id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
-                            <label for="checkbox-signup"> Remember me </label>
+                            <label for="checkbox-signup"> Recuerdame </label>
                         </div>
-                        <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Forgot pwd?</a> </div>
+                        <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Olvidaste la contraseña?</a> </div>
                 </div>
                 <div class="form-group text-center m-t-20">
                     <div class="col-xs-12">
-                        <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="submit">Log In</button>
+                        <button class="btn btn-info btn-lg btn-block text-uppercase btn-rounded" type="submit">Ingresar</button>
                     </div>
                 </div>
                 <div class="row">
@@ -38,15 +38,15 @@
                 </div>
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
-                        Don't have an account? <a [routerLink]="['/register']" class="text-primary m-l-5"><b>Sign Up</b></a>
+                        Aún no tienes cuenta? <a [routerLink]="['/register']" class="text-primary m-l-5"><b>Registrarte</b></a>
                     </div>
                 </div>
             </form>
             <form class="form-horizontal" id="recoverform" action="index.html">
                 <div class="form-group ">
                     <div class="col-xs-12">
-                        <h3>Recover Password</h3>
-                        <p class="text-muted">Enter your Email and instructions will be sent to you! </p>
+                        <h3>Recuperar Password</h3>
+                        <p class="text-muted">Ingresa tu email y te enviaremos las instrucciones! </p>
                     </div>
                 </div>
                 <div class="form-group ">
