--- a/src/app/pages/controls/create-control/create-control.component.html
+++ b/src/app/pages/controls/create-control/create-control.component.html
@@ -3,7 +3,7 @@
         <div class="card-body">
             <h4 class="card-title">Perfil de atleta</h4>
             <h6 class="card-subtitle">Acá puedes ver tu información de atleta y actualizar tus datos</h6>
-            <form [formGroup]="form" (submit)="guardarAtleta()" class="form p-t-20">
+            <form [formGroup]="form" (submit)="guardarProfile()" class="form p-t-20">
                 <div class="form-group">
                     <label for="exampleInputuname">Peso</label>
                     <div class="input-group">
