--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -104,8 +104,8 @@
                     </ul>
                 </li>
 
-                <li> 
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+                <li [routerLink]="['planification']" routerLinkActive="active" > 
+                    <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
                       <i class="mdi mdi-calendar"></i> <!--mdi mdi-folder-lock-open-->
                       <span class="hide-menu">Planificación
                           <span class="label label-rouded label-themecolor pull-right">
