--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -22,8 +22,8 @@
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
 
-                <li *ngIf="role === 'TRAINER'"> 
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+                <li *ngIf="role === 'TRAINER'" [routerLink]="['athletes']" routerLinkActive="active" > 
+                    <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
                       <i class="mdi mdi-account-multiple"></i> <!--mdi mdi-folder-lock-open-->
                       <span class="hide-menu">Atletas
                           <span class="label label-rouded label-themecolor pull-right">
@@ -33,8 +33,8 @@
                     </a>
                 </li>
 
-                <li *ngIf="role === 'ATHLETE'"> 
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+                <li *ngIf="role === 'ATHLETE'" [routerLink]="['trainers']" routerLinkActive="active" > 
+                    <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
                       <i class="mdi mdi-account-multiple"></i> <!--mdi mdi-folder-lock-open-->
                       <span class="hide-menu">Entrenadores
                           <span class="label label-rouded label-themecolor pull-right">
@@ -44,7 +44,7 @@
                     </a>
                 </li>
 
-                <li> 
+                <li *ngIf="role === 'TRAINER'"> 
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
                       <i class="mdi mdi-content-paste"></i> <!--mdi mdi-folder-lock-open-->
                       <span class="hide-menu">Rutinas
@@ -84,7 +84,7 @@
                     </ul>
                 </li>
 
-                <li> 
+                <li *ngIf="role === 'TRAINER'"> 
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
                       <i class="mdi mdi-dumbbell"></i> <!--mdi mdi-folder-lock-open-->
                       <span class="hide-menu">Entrenamientos
@@ -104,7 +104,7 @@
                     </ul>
                 </li>
 
-                <li [routerLink]="['planification']" routerLinkActive="active" > 
+                <li *ngIf="role === 'ATHLETE'" [routerLink]="['planification']" routerLinkActive="active" > 
                     <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
                       <i class="mdi mdi-calendar"></i> <!--mdi mdi-folder-lock-open-->
                       <span class="hide-menu">Planificación
