Creación Vista Home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,160 @@
-<p>home works!</p>
+<!-- PAGE HEADER  -->
+<div style="background-image: url(https://fondosmil.com/fondo/4066.jpg);">
+
+    <div class="container pt-1">
+            <br> <br>
+            <div class="row">
+                <div class="col-md-1">
+                    <div>
+                        <img src="assets/images/home/logoamarillo.png" width="80;">
+                    </div>
+                </div>
+                <div class="col-md-2" style="text-align: center; margin-top:5px; ">
+                        <div class="idTituloMenu" style="color:#007bff;text-align: center;color: #ffd000;">ORKOUT</div>
+                </div>
+                <div class="col-md-5"> </div>
+                <br> <br>
+                <div class="col-md-2">
+                        <button type="button" style="margin-bottom:5px;margin-top:15px;background: #398bf7;
+                        border: 1px solid #398bf7!important;color:whitesmoke;"class="btn btn-warning btn-block" [routerLink] = "['/login']">Iniciar Sesion</button>
+                        <!-- <p style="text-align: center " >     <a href="" (click) = "getLogoutUser()"><i class="fa fa-user"> Cerrar Sesión</i></a></p> -->
+                </div>
+                    <div class="col-md-2">
+                        <button type="button" style="margin-bottom:5px;margin-top:15px;background: #398bf7;
+                        border: 1px solid #398bf7!important;color:whitesmoke;"class="btn btn-warning btn-block" [routerLink] = "['/register']">Registrar</button>             
+                    </div>
+            </div>
+            
+    </div>        <!--  Cierra el header-->  
+
+    <div class="container2">
+        SIN DOLOR NO HAY GANANCIA
+    </div>
+    <div >
+        <h5 class="container3"> Tener un cuerpo perfecto requiere mucho entrenamiento. El cuerpo de aspecto agradable y  </h5>
+        <h5 class="container3"> organismos poderosos están interconectados, y podemos ayudarlo con ambos. </h5>
+    </div>
+    <br> <br> <br> <br>
+    <div style="text-align: center; ">
+        <a style="background-color: #398bf7;border: 1px solid #398bf7!important"  class="btn btn-danger"  
+        href="#welcome" data-caption-animate="fadeInUp" data-caption-delay="800"><span class="btn-text">Empezar</span></a>
+    </div>
+
+    
+    <h4 style="font-size:40px;padding-top:6cm"> </h4> <hr>
+</div>          <!--  Cierra la imagen-->
+
+
+
+<div>
+    <div>    
+        <h4 style="font-size:40px;padding-top:2cm"> </h4> 
+        <div class="container4"> <p id="welcome"> Bienvenido</p> </div> <hr class="divider"> <br>
+        <h5 class="container3b">¡Bienvenido al sitio web WorkOut! Esperamos que aprecie nuestros servicios y oportunidades que ofrecemos</h5>
+    </div> 
+        <br> <br> <br> <br>
+
+            <div class="row">
+                <div class="col-md-2"></div>
+                    <div class="col-md-4">
+                        <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-sm icon-dark-filled mdi mdi-account-multiple"></span>
+                            <h4 class="container4" style="font-size:30px;color:#398bf7">Entrenadores Calificados </h4> <br>
+                            <p class="container3b" style="font-size:15px">Nuestros entrenadores tienen años de experiencia</p>
+                            <p class="container3b" style="font-size:15px">en varios tipos de fitness y deportes</p>
+                        </div>  
+                    </div>
+                    <div class="col-md-4">
+                        <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-xs icon-dark-filled mdi mdi-thumb-up"></span>
+                            <h4 class="container4" style="font-size:30px;color:#398bf7">Enfoque Individual </h4> <br>
+                            <p class="container3b" style="font-size:15px">Cada cliente tiene un programa de entrenamiento </p>
+                            <p class="container3b" style="font-size:15px">y nutricion personalizado </p>
+                        </div>
+                    </div>
+                <div class="col-md-2"></div>
+
+            </div>
+            <!-- IMAGENES -->
+            <br> <br> <br> <br>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-2">
+                    <a href="welcome"><img class="img-responsive" src="assets/images/home/Fitness.png" alt=""></a>
+                </div>
+                <div class="col-md-2">
+                    <a href="welcome"><img class="img-responsive" src="assets/images/home/crossfit.png" alt=""></a>
+                </div>
+                <div class="col-md-2">
+                    <a href="welcome"><img class="img-responsive" src="assets/images/home/circle.png" alt=""></a>
+                </div>
+                <div class="col-md-2">
+                    <a href="welcome"><img class="img-responsive" src="assets/images/home/boody.png" alt=""></a>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+
+            <div>
+
+            <!-- SEPARACIÓN -->
+            </div>
+            <h4 style="font-size:40px;padding-top:5cm"> </h4> <hr>
+
+
+            <!-- ENTRENADORES -->
+            <div>
+                <div class="container4"> Entrenadores  </div> <br>
+                <hr class="divider"> <br>
+                    <div class="row" style="text-align: center;">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-2">
+                            <img class="img-responsive" src="assets/images/home/cros.png" alt="">
+                            <br> <br> <h5 class="text-bold offset-top-20">Nicholas Espinoza <small class="text-danger">CrossFit</small>
+                            </h5>
+                            <p class="offset-lg-top-0 text-muted">Tiene más de 10 años de experiencia en CrossFit y atletismo profesional.</p>
+                        </div>
+                        <div class="col-md-2">
+                            <img class="img-responsive" src="assets/images/home/fitneee.png" alt="">
+                            <br> <br><h5 class="text-bold offset-top-20">Camilo Jimenez <small class="text-danger">Fitness</small>
+                            </h5>
+                            <p class="offset-lg-top-0 text-muted">Camilo puede enseñarle todas las peculiaridades del ejercicio y la actividad aeróbica en grupo o individualmente.</p>
+                        </div>
+                        <div class="col-md-2">
+                            <img class="img-responsive" src="assets/images/home/yoga.png" alt="">
+                            <br> <br><h5 class="text-bold offset-top-20">Jose Muñoz <small class="text-danger">Yoga</small>
+                            </h5>
+                            <p class="offset-lg-top-0 text-muted">Nuestro entrenador de yoga líder, Jose, te ayudará a alcanzar la armonía total con tu cuerpo.</p>
+                        </div>
+                        <div class="col-md-2">
+                            <img class="img-responsive" src="assets/images/home/bodybuil.png" alt="">
+                            <br> <br><h5 class="text-bold offset-top-20">NIcolas Luna<small class="text-danger">Bodybuilding</small>
+                            </h5>
+                            <p class="offset-lg-top-0 text-muted">Nicolás no solo es nuestro entrenador más solicitado, sino también un ganador de muchos campeonatos.</p>
+                        </div>
+                        <div class="col-md-2"></div>
+                    </div>
+            </div>
+
+
+            <!-- SEPARACIÓN -->
+        <h4 style="font-size:40px;padding-top:5cm"> </h4> <hr>
+
+
+        <div style="background-color: black;">
+
+            <div class="row"> 
+                <div class="col-md-1"> </div>   
+                <div class="col-md-2">
+                        <a href="#"><img src="assets/images/home/logoamarillo.png" width="40" alt=""></a>
+                </div>
+                <div class="col-md-2" style="text-align: center; margin-top:-13px; ">
+                    <div class="idTituloMenu" style="text-align: center;color: #ffd000!important;margin-left: -535px;"><a href="#">ORKOUT</a></div>
+                </div>
+                <div class="col-md-5"> 
+                    WorkOut © 2020 . Privacy Policy
+                </div>
+                
+                <div class="col-md-2"></div>
+               
+
+            </div>
+        </div>
+</div>
