Cambio vista home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,18 +41,20 @@
     </div>
 
     
-    <h4 style="font-size:40px;padding-top:6cm"> </h4> <hr>
+    <h4 style="padding-top:6cm"> </h4> 
 </div>          <!--  Cierra la imagen-->
 
 
 
 <div>
     <div>    
-        <h4 style="font-size:40px;padding-top:2cm"> </h4> 
-        <div class="container4"> <p id="welcome"> Bienvenido</p> </div> <hr class="divider"> <br>
+        <h4 style="padding-top:2cm"> </h4> 
+        <hr class="divider"> <br>
+        <div class="container4"> <p id="welcome"> Bienvenido</p> </div> 
+        <hr class="divider"> <br>
         <h5 class="container3b">¡Bienvenido al sitio web WorkOut! Esperamos que aprecie nuestros servicios y oportunidades que ofrecemos</h5>
     </div> 
-        <br> <br> <br> <br>
+    <h4 style="padding-top:3cm"> </h4> 
 
             <div class="row">
                 <div class="col-md-2"></div>
@@ -74,7 +76,10 @@
 
             </div>
             <!-- IMAGENES -->
-            <br> <br> <br> <br>
+            <h4 style="padding-top:4cm"> </h4> 
+            <hr class="divider"> <br>
+            <div class="container4"> Rutinas  </div> <br>
+            <hr class="divider"> <br>
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-2">
@@ -91,16 +96,24 @@
                 </div>
                 <div class="col-md-2"></div>
             </div>
+            <div> 
+                <br>  
+                <p class="container3b" style="font-size:15px">Cada cliente puede acceder a la rutina que mas se adapte a su cuerpo, para así obtener un cuerpo tonificado </p>
+                <p class="container3b" style="font-size:15px">Por medio de nuestra pagina, puedes tener un seguimiento de tu evolución, la cual podras génerar cáda vez que quieras.</p>
+                <p class="container3b" style="font-size:15px">Del mismo modo, tendras disponible a tu entrenador 24/7, para cualquier consulta sobre tus rutinas. </p>
+            </div>
+
 
             <div>
 
             <!-- SEPARACIÓN -->
             </div>
-            <h4 style="font-size:40px;padding-top:5cm"> </h4> <hr>
+            <h4 style="font-size:40px;padding-top:3cm"> </h4> 
 
 
             <!-- ENTRENADORES -->
             <div>
+                <hr class="divider"> <br>
                 <div class="container4"> Entrenadores  </div> <br>
                 <hr class="divider"> <br>
                     <div class="row" style="text-align: center;">
